--- a/local/test2.html
+++ b/local/test2.html
@@ -241,15 +241,24 @@ text-align:center;
 padding:40px 0;
 }
 
-/* MOBILE */
+/* MOBILE FIXES */
 @media(max-width:768px){
 .hero{
 min-height:auto;
-padding-top:160px;
+padding-top:220px; /* Raised title higher on mobile */
 }
 .hero h1{font-size:2.4rem;}
 .hero p{font-size:1.1rem;}
-nav ul{gap:10px;}
+nav ul{
+gap:15px;
+justify-content:center; /* Clean menu layout */
+}
+nav li{list-style:none;}
+nav a{
+padding:8px 12px;
+font-size:0.95rem;
+text-align:center;
+}
 }
 </style>
 </head>
@@ -260,15 +269,15 @@ nav ul{gap:10px;}
 <nav>
 <div style="color:white;font-weight:800;font-size:1.6rem;">HomeRepairs4U</div>
 <ul>
-<li><a href="#service1">Fencing</a></li>
-<li><a href="#service2">Roof Repairs</a></li>
-<li><a href="#service3">Property Improvements</a></li>
-<li><a href="#service4">General Repairs</a></li>
-<li><a href="#service5">Gate Installation</a></li>
-<li><a href="#service6">Flat Roof Repairs</a></li>
-<li><a href="#service7">Sheds & Outbuildings</a></li>
-<li><a href="#service8">Decking & Timber</a></li>
-<li><a href="#service9">Emergency Repairs</a></li>
+<li><a href="https://homerepairs4u.com/local/fencing.html">Fencing</a></li>
+<li><a href="https://homerepairs4u.com/local/roof-repairs.html">Roof Repairs</a></li>
+<li><a href="https://homerepairs4u.com/local/property-improvements.html">Property Improvements</a></li>
+<li><a href="https://homerepairs4u.com/local/general-repairs.html">General Repairs</a></li>
+<li><a href="https://homerepairs4u.com/local/gate-installation.html">Gate Installation</a></li>
+<li><a href="https://homerepairs4u.com/local/flat-roof.html">Flat Roof Repairs</a></li>
+<li><a href="https://homerepairs4u.com/local/sheds-outbuildings.html">Sheds & Outbuildings</a></li>
+<li><a href="https://homerepairs4u.com/local/decking-timber.html">Decking & Timber</a></li>
+<li><a href="https://homerepairs4u.com/local/emergency-repairs.html">Emergency Repairs</a></li>
 </ul>
 </nav>
 </div>
@@ -303,129 +312,128 @@ nav ul{gap:10px;}
 <h2 class="fade" style="text-align:center;font-size:2.5rem;">Our Services</h2>
 <div class="grid">
 
-<!-- Containers 1-9 -->
-<!-- Container 1 -->
-<div id="service1" class="card fade">
-<img class="fade-child" src="images/fence.jpg" alt="Fencing work in progress">
+<!-- CARD 1 -->
+<div class="card fade">
+<img class="fade-child" src="images/fence.jpg" alt="Fencing work">
 <h3 class="fade-child">Fencing Installation</h3>
-<p class="fade-child">Strong, secure fencing installed properly and built to last.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="card-btn fade-child">Get Quote</a>
+<p class="fade-child">Secure and long-lasting fencing installed professionally.</p>
+<a href="https://homerepairs4u.com/local/fencing.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
 <div class="read-more-content">
-<p>We specialize in fencing using high-quality materials to ensure durability and security. Our team handles installations, repairs, and custom designs for any property type.</p>
+<p>We specialize in installing all types of fencing: wooden, metal, and composite, tailored to your property needs.</p>
 </div>
 </div>
 </div>
 
-<!-- Container 2 -->
-<div id="service2" class="card fade">
-<img class="fade-child" src="images/roof.jpg" alt="Roof repair work">
+<!-- CARD 2 -->
+<div class="card fade">
+<img class="fade-child" src="images/roof.jpg" alt="Roof Repairs">
 <h3 class="fade-child">Roof Repairs</h3>
-<p class="fade-child">Reliable roofing solutions with durable materials and no shortcuts.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="card-btn fade-child">Get Quote</a>
+<p class="fade-child">Reliable roof repairs to prevent leaks and damage.</p>
+<a href="https://homerepairs4u.com/local/roof-repairs.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
 <div class="read-more-content">
-<p>Our roofing experts repair leaks, replace shingles, and maintain your roof with precision and safety in mind.</p>
+<p>We fix all types of roofs including flat, tiled, and slate roofs, ensuring your home stays protected.</p>
 </div>
 </div>
 </div>
 
-<!-- Container 3 -->
-<div id="service3" class="card fade">
-<img class="fade-child" src="images/property.jpg" alt="Property improvements">
+<!-- CARD 3 -->
+<div class="card fade">
+<img class="fade-child" src="images/property.jpg" alt="Property Improvements">
 <h3 class="fade-child">Property Improvements</h3>
-<p class="fade-child">Professional upgrades that increase safety and property value.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="card-btn fade-child">Get Quote</a>
+<p class="fade-child">Enhance your property’s value and functionality.</p>
+<a href="https://homerepairs4u.com/local/property-improvements.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
 <div class="read-more-content">
-<p>We handle small to large upgrades, from painting and carpentry to full property renovations.</p>
+<p>From extensions to interior upgrades, we deliver high-quality improvements to meet your requirements.</p>
 </div>
 </div>
 </div>
 
-<!-- Container 4 -->
-<div id="service4" class="card fade">
-<img class="fade-child" src="images/repairs.jpg" alt="General repairs">
+<!-- CARD 4 -->
+<div class="card fade">
+<img class="fade-child" src="images/general.jpg" alt="General Repairs">
 <h3 class="fade-child">General Repairs</h3>
-<p class="fade-child">Quality repair work completed efficiently and professionally.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="card-btn fade-child">Get Quote</a>
+<p class="fade-child">Fixing issues across your property efficiently.</p>
+<a href="https://homerepairs4u.com/local/general-repairs.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
 <div class="read-more-content">
-<p>We cover all general repairs including plumbing, electrical fixes, and maintenance solutions.</p>
+<p>Our team handles a wide range of general maintenance and repair tasks to keep your property in top condition.</p>
 </div>
 </div>
 </div>
 
-<!-- Container 5 -->
-<div id="service5" class="card fade">
-<img class="fade-child" src="images/gates.jpg" alt="Gate installation in progress">
+<!-- CARD 5 -->
+<div class="card fade">
+<img class="fade-child" src="images/gate.jpg" alt="Gate Installation">
 <h3 class="fade-child">Gate Installation</h3>
-<p class="fade-child">Secure, durable gates installed with precision and attention to detail.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="card-btn fade-child">Get Quote</a>
+<p class="fade-child">Secure and stylish gate solutions for your property.</p>
+<a href="https://homerepairs4u.com/local/gate-installation.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
 <div class="read-more-content">
-<p>Custom gates, automated or manual, designed for security and aesthetic appeal.</p>
+<p>We install both automated and manual gates, customized to match your property’s aesthetics.</p>
 </div>
 </div>
 </div>
 
-<!-- Container 6 -->
-<div id="service6" class="card fade">
-<img class="fade-child" src="images/flat-roof.jpg" alt="Flat roof repair work">
+<!-- CARD 6 -->
+<div class="card fade">
+<img class="fade-child" src="images/flatroof.jpg" alt="Flat Roof Repairs">
 <h3 class="fade-child">Flat Roof Repairs</h3>
-<p class="fade-child">Long-lasting flat roof solutions using quality materials.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="card-btn fade-child">Get Quote</a>
+<p class="fade-child">Expert repair services for flat roofs.</p>
+<a href="https://homerepairs4u.com/local/flat-roof.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
 <div class="read-more-content">
-<p>We specialize in flat roof maintenance, leak prevention, and durable resurfacing solutions.</p>
+<p>We identify leaks and structural issues, restoring flat roofs to ensure long-lasting protection.</p>
 </div>
 </div>
 </div>
 
-<!-- Container 7 -->
-<div id="service7" class="card fade">
-<img class="fade-child" src="images/shed.jpg" alt="Shed construction in progress">
-<h3 class="fade-child">Shed & Outbuildings</h3>
-<p class="fade-child">Custom-built sheds and structures designed to last.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="card-btn fade-child">Get Quote</a>
+<!-- CARD 7 -->
+<div class="card fade">
+<img class="fade-child" src="images/sheds.jpg" alt="Sheds & Outbuildings">
+<h3 class="fade-child">Sheds & Outbuildings</h3>
+<p class="fade-child">Build or repair sheds, garages, and other structures.</p>
+<a href="https://homerepairs4u.com/local/sheds-outbuildings.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
 <div class="read-more-content">
-<p>From garden sheds to storage units, we provide strong, weatherproof constructions for your property.</p>
+<p>Our team handles construction and maintenance of sheds, garages, and other outbuildings efficiently.</p>
 </div>
 </div>
 </div>
 
-<!-- Container 8 -->
-<div id="service8" class="card fade">
-<img class="fade-child" src="images/decking.jpg" alt="Decking installation work">
-<h3 class="fade-child">Decking & Timber Work</h3>
-<p class="fade-child">Professional timber installations finished to a high standard.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="card-btn fade-child">Get Quote</a>
+<!-- CARD 8 -->
+<div class="card fade">
+<img class="fade-child" src="images/decking.jpg" alt="Decking & Timber">
+<h3 class="fade-child">Decking & Timber</h3>
+<p class="fade-child">Install or repair timber decks and outdoor features.</p>
+<a href="https://homerepairs4u.com/local/decking-timber.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
 <div class="read-more-content">
-<p>Decking, pergolas, and timber structures installed with quality craftsmanship and long-lasting finishes.</p>
+<p>We craft and repair decking, pergolas, and other timber structures using quality materials.</p>
 </div>
 </div>
 </div>
 
-<!-- Container 9 -->
-<div id="service9" class="card fade">
-<img class="fade-child" src="images/emergency.jpg" alt="Emergency repair work">
+<!-- CARD 9 -->
+<div class="card fade">
+<img class="fade-child" src="images/emergency.jpg" alt="Emergency Repairs">
 <h3 class="fade-child">Emergency Repairs</h3>
-<p class="fade-child">Fast response repairs when you need reliable help quickly.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="card-btn fade-child">Get Quote</a>
+<p class="fade-child">Fast response for urgent property issues.</p>
+<a href="https://homerepairs4u.com/local/emergency-repairs.html" class="card-btn fade-child">Get Quote</a>
 <div class="read-more fade-child">
 <button class="read-more-btn">Read More ▼</button>
 <div class="read-more-content">
-<p>Our emergency repair team responds quickly to urgent property issues to prevent further damage.</p>
+<p>Our emergency repair team is available to address urgent problems, minimizing damage and downtime.</p>
 </div>
 </div>
 </div>
@@ -442,7 +450,6 @@ nav ul{gap:10px;}
 
 <script>
 document.addEventListener("DOMContentLoaded", function(){
-// Fade on scroll for cards and children
 const faders=document.querySelectorAll(".fade");
 const observer=new IntersectionObserver(function(entries,observer){
 entries.forEach(entry=>{
@@ -453,7 +460,6 @@ observer.unobserve(entry.target);
 },{threshold:0.2});
 faders.forEach(el=>observer.observe(el));
 
-// Read more toggle
 const readMoreBtns = document.querySelectorAll(".read-more-btn");
 readMoreBtns.forEach(btn => {
 btn.addEventListener("click", () => {
