--- a/local/test2.html
+++ b/local/test2.html
@@ -37,21 +37,34 @@ display:flex;
 justify-content:space-between;
 align-items:center;
 padding:20px 0;
+position:relative;
 flex-wrap:wrap;
 }
-nav ul{
+nav .logo{
+color:white;
+font-weight:800;
+font-size:1.6rem;
+}
+nav ul.menu{
 display:flex;
 gap:20px;
 list-style:none;
 flex-wrap:wrap;
 }
-nav a{
+nav ul.menu li a{
 color:white;
 text-decoration:none;
 font-weight:600;
+padding:8px 12px;
 transition:0.3s;
 }
-nav a:hover{color:var(--accent);}
+nav ul.menu li a:hover{color:var(--accent);}
+.menu-toggle{
+display:none;
+font-size:1.8rem;
+color:white;
+cursor:pointer;
+}
 
 /* HERO */
 .hero{
@@ -245,18 +258,47 @@ padding:40px 0;
 @media(max-width:768px){
 .hero{
 min-height:auto;
-padding-top:220px; /* Raised title higher on mobile */
+padding-top:60px; /* raised title higher on mobile */
+padding-bottom:60px;
 }
-.hero h1{font-size:2.4rem;}
-.hero p{font-size:1.1rem;}
-nav ul{
-gap:15px;
-justify-content:center; /* Clean menu layout */
+.hero h1{
+font-size:2.8rem;
+line-height:1.2;
+margin-bottom:15px;
 }
-nav li{list-style:none;}
-nav a{
-padding:8px 12px;
-font-size:0.95rem;
+.hero p{
+font-size:1.2rem;
+margin-bottom:30px;
+}
+
+/* Cards spacing */
+.grid{
+gap:20px;
+}
+.card{
+padding:20px;
+}
+
+/* Hamburger menu */
+.menu-toggle{
+display:block;
+}
+nav ul.menu{
+flex-direction:column;
+display:none;
+background:rgba(15,32,39,0.95);
+width:100%;
+position:absolute;
+top:70px;
+left:0;
+padding:10px 0;
+border-radius:0 0 10px 10px;
+gap:10px;
+}
+nav ul.menu.show{
+display:flex;
+}
+nav ul.menu li{
 text-align:center;
 }
 }
@@ -267,8 +309,9 @@ text-align:center;
 <header>
 <div class="container">
 <nav>
-<div style="color:white;font-weight:800;font-size:1.6rem;">HomeRepairs4U</div>
-<ul>
+<div class="logo">HomeRepairs4U</div>
+<div class="menu-toggle">☰</div>
+<ul class="menu">
 <li><a href="https://homerepairs4u.com/local/fencing.html">Fencing</a></li>
 <li><a href="https://homerepairs4u.com/local/roof-repairs.html">Roof Repairs</a></li>
 <li><a href="https://homerepairs4u.com/local/property-improvements.html">Property Improvements</a></li>
@@ -312,7 +355,8 @@ text-align:center;
 <h2 class="fade" style="text-align:center;font-size:2.5rem;">Our Services</h2>
 <div class="grid">
 
-<!-- CARD 1 -->
+<!-- 9 Service Cards -->
+<!-- Card 1 -->
 <div class="card fade">
 <img class="fade-child" src="images/fence.jpg" alt="Fencing work">
 <h3 class="fade-child">Fencing Installation</h3>
@@ -326,7 +370,7 @@ text-align:center;
 </div>
 </div>
 
-<!-- CARD 2 -->
+<!-- Card 2 -->
 <div class="card fade">
 <img class="fade-child" src="images/roof.jpg" alt="Roof Repairs">
 <h3 class="fade-child">Roof Repairs</h3>
@@ -340,7 +384,7 @@ text-align:center;
 </div>
 </div>
 
-<!-- CARD 3 -->
+<!-- Card 3 -->
 <div class="card fade">
 <img class="fade-child" src="images/property.jpg" alt="Property Improvements">
 <h3 class="fade-child">Property Improvements</h3>
@@ -354,7 +398,7 @@ text-align:center;
 </div>
 </div>
 
-<!-- CARD 4 -->
+<!-- Card 4 -->
 <div class="card fade">
 <img class="fade-child" src="images/general.jpg" alt="General Repairs">
 <h3 class="fade-child">General Repairs</h3>
@@ -368,7 +412,7 @@ text-align:center;
 </div>
 </div>
 
-<!-- CARD 5 -->
+<!-- Card 5 -->
 <div class="card fade">
 <img class="fade-child" src="images/gate.jpg" alt="Gate Installation">
 <h3 class="fade-child">Gate Installation</h3>
@@ -382,7 +426,7 @@ text-align:center;
 </div>
 </div>
 
-<!-- CARD 6 -->
+<!-- Card 6 -->
 <div class="card fade">
 <img class="fade-child" src="images/flatroof.jpg" alt="Flat Roof Repairs">
 <h3 class="fade-child">Flat Roof Repairs</h3>
@@ -396,7 +440,7 @@ text-align:center;
 </div>
 </div>
 
-<!-- CARD 7 -->
+<!-- Card 7 -->
 <div class="card fade">
 <img class="fade-child" src="images/sheds.jpg" alt="Sheds & Outbuildings">
 <h3 class="fade-child">Sheds & Outbuildings</h3>
@@ -410,7 +454,7 @@ text-align:center;
 </div>
 </div>
 
-<!-- CARD 8 -->
+<!-- Card 8 -->
 <div class="card fade">
 <img class="fade-child" src="images/decking.jpg" alt="Decking & Timber">
 <h3 class="fade-child">Decking & Timber</h3>
@@ -424,7 +468,7 @@ text-align:center;
 </div>
 </div>
 
-<!-- CARD 9 -->
+<!-- Card 9 -->
 <div class="card fade">
 <img class="fade-child" src="images/emergency.jpg" alt="Emergency Repairs">
 <h3 class="fade-child">Emergency Repairs</h3>
@@ -450,6 +494,7 @@ text-align:center;
 
 <script>
 document.addEventListener("DOMContentLoaded", function(){
+// Fade in
 const faders=document.querySelectorAll(".fade");
 const observer=new IntersectionObserver(function(entries,observer){
 entries.forEach(entry=>{
@@ -460,6 +505,7 @@ observer.unobserve(entry.target);
 },{threshold:0.2});
 faders.forEach(el=>observer.observe(el));
 
+// Read more toggle
 const readMoreBtns = document.querySelectorAll(".read-more-btn");
 readMoreBtns.forEach(btn => {
 btn.addEventListener("click", () => {
@@ -468,8 +514,12 @@ parent.classList.toggle("show");
 btn.textContent = parent.classList.contains("show") ? "Read Less ▲" : "Read More ▼";
 });
 });
-});
-</script>
 
-</body>
-</html>
+// Hamburger toggle
+const toggle = document.querySelector('.menu-toggle');
+const menu = document.querySelector('nav ul.menu');
+toggle.addEventListener('click', () => {
+menu.classList.toggle('show');
+});
+});
+</script
