--- a/local/test2.html
+++ b/local/test2.html
@@ -334,13 +334,13 @@ text-align:center;
 <section class="hero">
 <div class="hero-overlay"></div>
 <div class="container hero-content">
-<h1 class="fade">Built Properly. Priced Fairly. Done Right.</h1>
-<p class="fade">Trusted local specialists in fencing, roofing & property repairs.</p>
+<h1 class="fade">Hard Work. Priced Fairly. Done Right.</h1>
+<p class="fade">Exterior Decorating, Pressure Washing, Gutter Services, Fence Erectors, Ivy Removal.</p>
 <a href="https://homerepairs4u.com/local/test2.html" class="btn fade">Get Your Free Quote</a>
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
-<span>✔ Free Written Quotes</span>
-<span>✔ 10+ Years Experience</span>
+<span>✔ Instant Oline Quotes</span>
+<span>✔ 32+ Years Experience</span>
 <span>✔ Local & Reliable</span>
 </div>
 </div>
