--- a/local/test2.html
+++ b/local/test2.html
@@ -339,7 +339,7 @@ text-align:center;
 <a href="https://homerepairs4u.com/local/test2.html" class="btn fade">Get Your Free Quote</a>
 <div class="trust-row fade">
 <span>✔ Fully Insured</span>
-<span>✔ Instant Oline Quotes</span>
+<span>✔ Instant Online Quotes</span>
 <span>✔ 32+ Years Experience</span>
 <span>✔ Local & Reliable</span>
 </div>
@@ -348,10 +348,10 @@ text-align:center;
 
 <section class="stats fade">
 <div class="container stats-grid">
-<div><h3>300+</h3><p>Projects Completed</p></div>
-<div><h3>10+</h3><p>Years Experience</p></div>
-<div><h3>100%</h3><p>Free Written Quotes</p></div>
-<div><h3>5★</h3><p>Rated Local Service</p></div>
+<div><h3>Over 3200+</h3><p>Projects Completed</p></div>
+<div><h3>Over 32</h3><p>Years Experience</p></div>
+<div><h3>Instant</h3><p>Online Quotes For Any Project</p></div>
+<div><h3>5★</h3><p>Local Service</p></div>
 </div>
 </section>
 
