--- a/local/test2.html
+++ b/local/test2.html
@@ -334,7 +334,7 @@ text-align:center;
 <section class="hero">
 <div class="hero-overlay"></div>
 <div class="container hero-content">
-<h1 class="fade">Hard Work. Priced Fairly. Done Right.</h1>
+<h1 class="fade">External Maintenance. Priced Fairly. Done Right.</h1>
 <p class="fade">Exterior Decorating, Pressure Washing, Gutter Services, Fence Erectors, Ivy Removal.</p>
 <a href="https://homerepairs4u.com/local/test2.html" class="btn fade">Get Your Free Quote</a>
 <div class="trust-row fade">
