--- a/local/test2.html
+++ b/local/test2.html
@@ -75,7 +75,7 @@ align-items:center;
 justify-content:center;
 text-align:center;
 color:white;
-background:url(/images/house-before-after.webp') center/cover no-repeat;
+background:url(/images/house-before-after.webp) center/cover no-repeat;
 overflow:hidden;
 }
 .hero-overlay{
