--- a/local/test2.html
+++ b/local/test2.html
@@ -74,8 +74,8 @@ display:flex;
 align-items:center;
 justify-content:center;
 text-align:center;
-color:white;
-background:url(/images/house-before-after.webp) center/cover no-repeat;
+background: #000;
+  color:white;
 overflow:hidden;
 }
 .hero-overlay{
