--- a/local/test2.html
+++ b/local/test2.html
@@ -233,6 +233,7 @@ max-height:200px;
 .grid .card:nth-child(7){transition-delay:0.7s;}
 .grid .card:nth-child(8){transition-delay:0.8s;}
 .grid .card:nth-child(9){transition-delay:0.9s;}
+.grid .card:nth-child(10){transition-delay:1.0s;}
 
 /* Fade children inside card sequentially */
 .card .fade-child{
